--- a/recover-matrix-server/roles/recover-matrix-server/extra-vars/digitalocean_provision_server_extra-vars.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/extra-vars/digitalocean_provision_server_extra-vars.json.j2
@@ -2,5 +2,11 @@
   "matrix_domain": "{{ matrix_domain }}",
   "base_domain_used": "{{ base_domain_used }}",
   "awx_element_subdomain": "{{ awx_element_subdomain }}",
-  "do_droplet_region_long": "{{ do_droplet_region_long }}"
+  "do_droplet_region_long": "{{ do_droplet_region_long }}",
+  "matrix_domain": "{{ matrix_domain }}",
+  "target": "matrix.{{ matrix_domain }}",
+  "matrix_awx_enabled": "true",
+  "plan_title": "{{ plan_title }}",
+  "subscription_id": "{{ new_subscription_id }}",
+  "member_id": "{{ member_id }}"
 }
