lower case base_domain_used

--- a/recover-matrix-server/roles/recover-matrix-server/extra-vars/on_premises_provision_server_extra-vars.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/extra-vars/on_premises_provision_server_extra-vars.json.j2
@@ -1,6 +1,6 @@
 {
   "matrix_domain": "{{ matrix_domain }}",
-  "base_domain_used": "{{ base_domain_used }}",
+  "base_domain_used": "{{ base_domain_used | lower }}",
   "awx_element_subdomain": "{{ awx_element_subdomain }}",
   "matrix_domain": "{{ matrix_domain }}",
   "target": "matrix.{{ matrix_domain }}",
