--- a/recover-matrix-server/roles/recover-matrix-server/extra-vars/digitalocean_provision_server_extra-vars.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/extra-vars/digitalocean_provision_server_extra-vars.json.j2
@@ -1,6 +1,6 @@
 {
   "matrix_domain": "{{ matrix_domain }}",
-  "base_domain_used": "{{ base_domain_used }}",
+  "base_domain_used": "{{ base_domain_used | lower }}",
   "awx_element_subdomain": "{{ awx_element_subdomain }}",
   "do_droplet_region_long": "{{ do_droplet_region_long }}",
   "matrix_domain": "{{ matrix_domain }}",
