--- a/recover-matrix-server/roles/recover-matrix-server/surveys/provision_survey_on-premises.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/surveys/provision_survey_on-premises.json.j2
@@ -20,7 +20,7 @@
       "required": false,
       "min": null,
       "max": null,
-      "default": "{{ base_domain_used }}",
+      "default": "{{ base_domain_used | lower }}",
       "choices": "true\nfalse",
       "new_question": true,
       "variable": "base_domain_used",
