refine recovery tool

--- a/recover-matrix-server/roles/recover-matrix-server/templates/mp_create_subscription_template.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/templates/mp_create_subscription_template.json.j2
@@ -4,5 +4,5 @@
   "client_email": "{{ client_email }}",
   "member_id": "{{ member_id }}",
   "subscription_id": "{{ new_subscription_id }}",
-  "plan_title": "{{ plan_title }}"
+  "plan_title": "{{ new_plan_title }}"
 }
