--- a/recover-matrix-server/roles/recover-matrix-server/templates/digitalocean_provision_server_extra-vars.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/templates/digitalocean_provision_server_extra-vars.json.j2
@@ -2,6 +2,7 @@
   "matrix_domain": "{{ matrix_domain }}",
   "base_domain_used": "{{ base_domain_used | lower }}",
   "awx_element_subdomain": "{{ awx_element_subdomain }}",
+  "do_droplet_region_long": "{{ new_do_droplet_region_long }}",
   "matrix_domain": "{{ matrix_domain }}",
   "target": "matrix.{{ matrix_domain }}",
   "matrix_awx_enabled": "true",
