--- a/recover-matrix-server/roles/recover-matrix-server/templates/digitalocean_provision_server_extra-vars.json.j2
+++ b/recover-matrix-server/roles/recover-matrix-server/templates/digitalocean_provision_server_extra-vars.json.j2
@@ -6,7 +6,7 @@
   "matrix_domain": "{{ matrix_domain }}",
   "target": "matrix.{{ matrix_domain }}",
   "matrix_awx_enabled": "true",
-  "plan_title": "{{ plan_title }}",
+  "plan_title": "{{ new_plan_title }}",
   "subscription_id": "{{ new_subscription_id }}",
   "member_id": "{{ member_id }}"
 }
